We added a juicy UI for our game.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Font family-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    <!--Link css file-->
+    <link rel="stylesheet" href="style.css">
+    <!--Script js file-->
+    <script src="script.js" defer></script>
+
     <title>Rock, paper, scissors</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <h1>Rock Paper Scissors</h1>
+    <div>
+        <h2>Score</h2>
+        <h3>Player: 0   Computer: 0</h3>
+    </div>
+    <div class="button-container">
+        <button class="buttons" id="rock"></button>
+        <button class="buttons" id="paper"></button>
+        <button class="buttons" id="scissors"></button>
+    </div>
 </body>
 </html>
